# kubefuzz

./: .gitignore  Cargo.toml  README.md  build.rs
arch/: architecture.drawio
docs/: README.md  docusaurus.config.js  package.json
docs/docs/: constraints.md  example.md  fuzz.md  generate.md  get-schemas.md  intro.md  mutate.md  overview.md  tipps.md
docs/docs/modes/: _category_.yaml  fuzz.md  mutate.md
docs/src/css/: custom.css
docs/src/pages/: index.js
docs/versioned_docs/version-0.1.0/: fuzz.md  get-schemas.md  overview.md  qa.md  tipps.md
docs/versioned_docs/version-0.1.1/: example.md  intro.md  logging.md  qa.md
example/: README.md
example/ac/: constraint.yaml  faulty-resource.yaml  main.py  resource.yaml  server.crt  server.key  validatingac.yaml
predefined_constraints/: README.md
sample_ac/: README.md
sample_ac/ac/: Dockerfile  constraint.yaml  deployment.yaml  fooddeliveryorder-crd.yaml  main.py  p  resource.yaml  server.crt  server.csr  server.key  validatingac.yaml
sample_constraints/cis-1.24/: pod.yaml
src/: constraint.json  constraint.yaml  main.rs
src/args/: mod.rs
src/conf/: mod.rs
src/executor/: mod.rs
src/generator/: gen.rs  k8sresc.rs  mod.rs  rand.rs
src/log/: mod.rs
src/mutator/: gen.rs  mod.rs  rand.rs
src/runtime/: mod.rs  mode_fuzz.rs  mode_generate.rs  mode_get_resources.rs  mode_getschemas.rs  mode_mutate.rs
src/schemagen/: README.md  generate.sh  kindclusterconf.yaml  requirements.txt
src/schemagen/schemas/: _definitions.json  affinity.json  aggregationrule.json  all.json  binding.json  (+437 more)
src/tui/: mod.rs
(+3 files in other folders)
