[package]
name = "kubefuzz"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonpath_lib = "0.3.0"
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
kube = "0.82.2"
log = "0.4.0"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
rand_xorshift = "0.3.0"
regex = "1.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.21"
tokio = {version="1.28.2", features=["full"]}
tower = "0.4.13"
